services/helm-repo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helm-repo
  labels:
    app.kubernetes.io/name: helm-repo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: helm-repo
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: helm-repo
    spec:
      securityContext:
        fsGroup: 65533 # to make SSH key readable
      containers:
        # The configuration of the git-sync ssh configuration
        # can be found https://github.com/kubernetes/git-sync/blob/v3.3.5/docs/ssh.md
        - name: git-sync
          image: k8s.gcr.io/git-sync/git-sync:v3.3.5
          resources:
            limits:
              cpu: 500m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          securityContext:
            runAsUser: 65533 # git-sync user
          volumeMounts:
            - mountPath: /var/www/htdocs
              name: webroot
        - name: darkhttpd
          image: p3terx/darkhttpd:1.13
          resources:
            limits:
              cpu: 500m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          args:
            -
            # - --no-listing
            - --port
            - "80"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /var/www/htdocs/argo-demo/apps
              name: webroot
      volumes:
        - name: webroot
          emptyDir: {}
        - name: git-secret
          secret:
            secretName: git-creds
            defaultMode: 0400
