services/helm-repo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helm-repo-svc
  labels:
    app.kubernetes.io/name: helm-repo
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: helm-repo
