services/helm-repo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-repo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: helm-repo.local
      http:
        paths:
        - path: "/"
          pathType: ImplementationSpecific
          backend:
            service:
              name: helm-repo
              port:
                number: 80
